# SAR-Autonomy

./: README.md
sar_apriltags/: CMakeLists.txt  package.xml
sar_apriltags/src/: april_tag_detection_tb.cpp
sar_demos/: CMakeLists.txt  package.xml
sar_demos/launch/: sar_bringup.launch  sar_explore_and_deliver.launch  sar_initialize.launch
sar_drone/: CMakeLists.txt  package.xml
sar_drone/launch/: $ rosrun camera_calibration cameracalibrator.py --  .SAR_drone_orb.launch.swp  SAR_apriltags.launch  SAR_drone.launch  SAR_drone_orb.launch  SAR_drone_tmp.launch  togglecam.txt
sar_drone/src/: .ardrone_bottom.yaml.swp  .ardrone_orb.yaml.swp  SAR_drone_controller.py  SAR_drone_ctrl_node.py  SAR_drone_localization_node.py  SAR_drone_motion planner_node.py  SAR_drone_motion_planner.py  ardrone_bottom.yaml  ardrone_orb.yaml
sar_drone_interface/: CMakeLists.txt  package.xml
sar_drone_interface/action/: DeliverCrate.action  FlyDrone.action  LoadCrate.action  PickCrate.action
sar_drone_interface/src/: ARDroneActionServer.py
sar_exploration/: CMakeLists.txt  package.xml
sar_exploration/common/: domain.pddl
sar_exploration/launch/: turtlebot.launch  turtlebot_gazebo.launch
sar_exploration/launch/includes/: gmapping.launch.xml  move_base.launch.xml  rosplan.launch.xml
sar_exploration/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
sar_exploration/src/: tbot_load_exploration_wp.py  waypoints.txt
sar_gmapping/: CMakeLists.txt  package.xml
sar_gmapping/launch/: gmapping.launch
sar_planning/: CMakeLists.txt  package.xml
sar_planning/launch/: .AddObjects.cpp.swp  mission.launch  turtlebot.launch
sar_planning/src/: .TbotExplore.cpp.swp  ARTagLocationInterface.py  ARTagLocationSpoofer.py  ARTagPersonID.txt  explore_and_deliver.py  set_delivery_goals.py  set_initial_state.py
