<?xml version="1.0"?>
<package>
  <name>sar_gmapping</name>
  <version>1.0.0</version>
  <description>Mapping of SAR area by fusing IMU and RPLidar data</description>

  <maintainer email="vidits@kth.se">Vidit Saxena</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
</package>
